--- a/DCS.Alternative.Launcher/Windows/MainWindow.xaml
+++ b/DCS.Alternative.Launcher/Windows/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="DCS.Alternative.Launcher.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Interactions="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:behaviors="clr-namespace:DCS.Alternative.Launcher.Behaviors"
         xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Interactions="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:behaviors="clr-namespace:DCS.Alternative.Launcher.Behaviors"
         Title="DCS Alternative Launcher"
         Width="1240"
         Height="800"
@@ -78,14 +78,14 @@
                                          TintColor="#33000000"
                                          TintOpacity="1">
                             <Grid>
-                                <Image Width="50"
-                                       Height="50"
+                                <Image Width="75"
+                                       Height="75"
                                        Margin="30,0,0,0"
                                        HorizontalAlignment="Left"
                                        VerticalAlignment="Center"
                                        RenderOptions.BitmapScalingMode="HighQuality"
                                        RenderOptions.EdgeMode="Aliased"
-                                       Source="/Images/dal-icon-256.png"
+                                       Source="/Images/dal-icon-white.png"
                                        Stretch="Uniform">
                                     <Image.Effect>
                                         <DropShadowEffect BlurRadius="4" ShadowDepth="0" />
@@ -134,10 +134,9 @@
                                         Click="Button_Click"
                                         Cursor="Hand"
                                         WindowChrome.IsHitTestVisibleInChrome="True">
-                                    <Path
-                                        Data="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"
-                                        Fill="#FF5F5F5F"
-                                        Stretch="Uniform" />
+                                    <Path Data="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"
+                                          Fill="#FF5F5F5F"
+                                          Stretch="Uniform" />
                                 </Button>
                             </Grid>
                         </fw:AcrylicPanel>
