#41 Added TF51 and SU25T to documentation

--- a/DCS.Alternative.Launcher/Plugins/Manuals/Views/ManualsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Manuals/Views/ManualsView.xaml
@@ -25,16 +25,11 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary
-                    Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingWave.xaml" />
-                <ResourceDictionary
-                    Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingThreeDots.xaml" />
-                <ResourceDictionary
-                    Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingFlipPlane.xaml" />
-                <ResourceDictionary
-                    Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingPulse.xaml" />
-                <ResourceDictionary
-                    Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingDoubleBounce.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingWave.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingThreeDots.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingFlipPlane.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingPulse.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/LoadingIndicators.WPF;component/Styles/LoadingDoubleBounce.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="{x:Type TextBlock}">
                 <Setter Property="Foreground" Value="#FFFFFFFF" />
@@ -67,8 +62,7 @@
                                     BorderBrush="{TemplateBinding BorderBrush}"
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     SnapsToDevicePixels="true">
-                                <ScrollViewer HorizontalScrollBarVisibility="Disabled"
-                                              VerticalScrollBarVisibility="Auto">
+                                <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                                     <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                                 </ScrollViewer>
                             </Border>
@@ -144,7 +138,7 @@
                                                                 Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
                                                                 CommandParameter="{Binding}"
                                                                 Style="{StaticResource HyperlinkButton}">
-                                                            <TextBlock>
+                                                            <TextBlock TextTrimming="CharacterEllipsis" ToolTip="{Binding Name}">
                                                                 <Underline>
                                                                     <Run Text="{Binding Name}" />
                                                                 </Underline>
@@ -183,7 +177,7 @@
                                                                 Command="{Binding DataContext.OpenUrlCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
                                                                 CommandParameter="{Binding Url}"
                                                                 Style="{StaticResource HyperlinkButton}">
-                                                            <TextBlock>
+                                                            <TextBlock ToolTip="{Binding Name}">
                                                                 <Underline>
                                                                     <Run Text="{Binding Name}" />
                                                                 </Underline>
